--- a/charts/cluster-scanner/tests/configmap_test.yaml
+++ b/charts/cluster-scanner/tests/configmap_test.yaml
@@ -342,34 +342,73 @@ tests:
           path: data.no_proxy
           value: "fake-no-proxy"
 
-  - it: "has correct platform services value when onPremCompatibilityVersion is NOT provided"
+  - it: "has correct platform services value when onPremCompatibilityVersion is NOT provided and region does NOT support platform services"
     set:
       global.sysdig.apiHost: "http://test.com"
+      global.sysdig.region: ""
+    asserts:
+      - isNull:
+          path: data.enable_platform_services
+
+  - it: "has correct platform services value when onPremCompatibilityVersion is NOT provided and region supports platform services"
+    set:
+      global.sysdig.apiHost: "http://test.com"
+      global.sysdig.region: "us1"
     asserts:
       - equal:
           path: data.enable_platform_services
           value: "true"
 
-  - it: "has correct platform services value when onPremCompatibilityVersion is < 6.6"
+  - it: "has correct platform services value when onPremCompatibilityVersion is < 6.6 and region does NOT support platform services"
     set:
       global.sysdig.apiHost: "http://test.com"
       onPremCompatibilityVersion: "6.5.99"
+      global.sysdig.region: ""
     asserts:
       - isNull:
           path: data.enable_platform_services
 
-  - it: "has correct platform services value when onPremCompatibilityVersion is = 6.5"
+  - it: "has correct platform services value when onPremCompatibilityVersion is < 6.6 and region supports platform services"
+    set:
+      global.sysdig.apiHost: "http://test.com"
+      onPremCompatibilityVersion: "6.5.99"
+      global.sysdig.region: "us1"
+    asserts:
+      - isNull:
+          path: data.enable_platform_services
+
+  - it: "has correct platform services value when onPremCompatibilityVersion is = 6.5 and region does NOT support platform services"
     set:
       global.sysdig.apiHost: "http://test.com"
       onPremCompatibilityVersion: "6.5"
+      global.sysdig.region: ""
     asserts:
       - isNull:
           path: data.enable_platform_services
 
-  - it: "has correct platform services value when onPremCompatibilityVersion is = 6.6.0"
+  - it: "has correct platform services value when onPremCompatibilityVersion is = 6.5 and region  supports platform services"
+    set:
+      global.sysdig.apiHost: "http://test.com"
+      onPremCompatibilityVersion: "6.5"
+      global.sysdig.region: "us1"
+    asserts:
+      - isNull:
+          path: data.enable_platform_services
+
+  - it: "has correct platform services value when onPremCompatibilityVersion is = 6.6.0 and region does NOT support platform services"
     set:
       global.sysdig.apiHost: "http://test.com"
       onPremCompatibilityVersion: "6.6.0"
+      global.sysdig.region: ""
+    asserts:
+      - isNull:
+          path: data.enable_platform_services
+
+  - it: "has correct platform services value when onPremCompatibilityVersion is = 6.6.0 and region supports platform services"
+    set:
+      global.sysdig.apiHost: "http://test.com"
+      onPremCompatibilityVersion: "6.6.0"
+      global.sysdig.region: "us1"
     asserts:
       - equal:
           path: data.enable_platform_services
@@ -392,7 +431,6 @@ tests:
       - equal:
           path: data.enable_platform_services
           value: "true"
-
 
   - it: "fails if onPremCompatibilityVersion is not a valid semver"
     set:
