--- a/charts/node-analyzer/tests/agent_tags_test.yaml
+++ b/charts/node-analyzer/tests/agent_tags_test.yaml
@@ -1,6 +1,20 @@
 suite: Test node-analyzer Agent Tags
 templates:
   - daemonset-node-analyzer.yaml
+  # For checksums
+  - clusterrole-node-analyzer.yaml
+  - clusterrolebinding-node-analyzer.yaml
+  - configmap-benchmark-runner.yaml
+  - configmap-host-analyzer.yaml
+  - configmap-host-scanner.yaml
+  - configmap-image-analyzer.yaml
+  - configmap-kspm-analyzer.yaml
+  - secrets.yaml
+  - serviceaccount-node-analyzer.yaml
+  - runtimeScanner/runtime-scanner-configmap.yaml
+values:
+  - ./default_values.yaml
+
 tests:
   - it: Check agent tags are set from global.settings.tags
     set:
