--- a/charts/node-analyzer/tests/global_overrides_test.yaml
+++ b/charts/node-analyzer/tests/global_overrides_test.yaml
@@ -16,7 +16,7 @@ templates:
   - serviceaccount-node-analyzer.yaml
   - runtimeScanner/runtime-scanner-configmap.yaml
 values:
-  - ./default_values.yaml
+  - ./default_required_values.yaml
 
 tests:
   - it: check value of accessKey without local chart override - local value provided
@@ -136,6 +136,8 @@ tests:
         template: daemonset-node-analyzer.yaml
 
   - it: check imagePullPolicy for eveconnector-api-deployment with global
+    values:
+      - ./default_required_values.yaml
     set:
       global:
         kspm:
@@ -161,6 +163,8 @@ tests:
       - runtimeScanner/eveconnector-api-deployment.yaml
 
   - it: check imagePullPolicy for daemonset-node-analyzer with global
+    values:
+      - ./default_required_values.yaml
     set:
       global:
         kspm:
@@ -207,6 +211,8 @@ tests:
       - daemonset-node-analyzer.yaml
 
   - it: check imagePullPolicy for eveconnector-api-deployment with legacy
+    values:
+      - ./default_required_values.yaml
     set:
       global:
         kspm:
@@ -232,6 +238,8 @@ tests:
       - runtimeScanner/eveconnector-api-deployment.yaml
 
   - it: check imagePullPolicy for eveconnector-api-deployment with local override
+    values:
+      - ./default_required_values.yaml
     set:
       global:
         kspm:
