--- a/charts/node-analyzer/tests/daemonset_affinity_test.yaml
+++ b/charts/node-analyzer/tests/daemonset_affinity_test.yaml
@@ -13,7 +13,7 @@ templates:
   - serviceaccount-node-analyzer.yaml
   - runtimeScanner/runtime-scanner-configmap.yaml
 values:
-  - ./default_values.yaml
+  - ./default_required_values.yaml
 tests:
   - it: Test the default affinity annotations (<1.14)
     capabilities:
