--- a/charts/node-analyzer/tests/priorityclass_test.yaml
+++ b/charts/node-analyzer/tests/priorityclass_test.yaml
@@ -12,9 +12,8 @@ templates:
   - configmap-kspm-analyzer.yaml
   - secrets.yaml
   - serviceaccount-node-analyzer.yaml
-  - runtimeScanner/runtime-scanner-configmap.yaml
 values:
-  - ./default_values.yaml
+  - ./default_required_values.yaml
 tests:
   - it: Check PriorityClass limits are correctly set
     set:
