fix also sysdig-deploy tests

--- a/charts/sysdig-deploy/tests/golden_template_test.yaml
+++ b/charts/sysdig-deploy/tests/golden_template_test.yaml
@@ -5,6 +5,17 @@ templates:
   - charts/agent/templates/secrets.yaml
   - charts/nodeAnalyzer/templates/daemonset-node-analyzer.yaml
   - charts/nodeAnalyzer/templates/configmap-benchmark-runner.yaml
+  # For checksums
+  - charts/nodeAnalyzer/templates/clusterrole-node-analyzer.yaml
+  - charts/nodeAnalyzer/templates/clusterrolebinding-node-analyzer.yaml
+  - charts/nodeAnalyzer/templates/configmap-benchmark-runner.yaml
+  - charts/nodeAnalyzer/templates/configmap-host-analyzer.yaml
+  - charts/nodeAnalyzer/templates/configmap-host-scanner.yaml
+  - charts/nodeAnalyzer/templates/configmap-image-analyzer.yaml
+  - charts/nodeAnalyzer/templates/configmap-kspm-analyzer.yaml
+  - charts/nodeAnalyzer/templates/secrets.yaml
+  - charts/nodeAnalyzer/templates/serviceaccount-node-analyzer.yaml
+  - charts/nodeAnalyzer/templates/runtimeScanner/runtime-scanner-configmap.yaml
 tests:
   - it: Testing agent and node-analyzer deployed
     set:
