--- a/charts/node-analyzer/tests/annotations_test.yaml
+++ b/charts/node-analyzer/tests/annotations_test.yaml
@@ -63,7 +63,7 @@ tests:
         clusterConfig:
           name: "test"
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
     asserts:
       - hasDocuments:
           count: 1
