--- a/charts/node-analyzer/tests/conditional_flag_test.yaml
+++ b/charts/node-analyzer/tests/conditional_flag_test.yaml
@@ -22,7 +22,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
         kspm:
           deploy: true
       clusterName: test-cluster
@@ -37,7 +37,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
         kspm:
           deploy: true
       clusterName: test-cluster
@@ -51,7 +51,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         benchmarkRunner:
           deploy: true
@@ -70,7 +70,7 @@ tests:
         kspm:
           deploy: true
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
     asserts:
       - failedTemplate:
           errorMessage: "A valid clusterName is required"
@@ -79,7 +79,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         imageAnalyzer:
           deploy: true
@@ -96,7 +96,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         hostAnalyzer:
           deploy: true
@@ -113,7 +113,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         benchmarkRunner:
           deploy: true
@@ -132,7 +132,7 @@ tests:
         clusterConfig:
           name: "test"
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         runtimeScanner:
           deploy: true
@@ -149,7 +149,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         runtimeScanner:
           deploy: true
@@ -181,7 +181,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         imageAnalyzer:
           deploy: false
@@ -198,7 +198,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         hostAnalyzer:
           deploy: false
@@ -215,7 +215,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         benchmarkRunner:
           deploy: false
@@ -232,7 +232,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         runtimeScanner:
           deploy: false
@@ -249,7 +249,7 @@ tests:
     set:
       global:
         sysdig:
-          accessKey: "XXX"
+          accessKey: "AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE"
       nodeAnalyzer:
         runtimeScanner:
           deploy: true
