--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -392,7 +392,7 @@ nodeAnalyzer:
 
     image:
       repository: sysdig/vuln-host-scanner
-      tag: "0.7.0"
+      tag: "0.7.0-rc"
       digest:
       pullPolicy:
 
