--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,4 +6,4 @@
 /charts/admission-controller @sysdiglabs/cloud-native
 /charts/cloud-connector @sysdiglabs/cloud-native
 /charts/cloud-scanning @sysdiglabs/cloud-native
-/charts/registry-scanner @sysdiglabs/cloud-native @sysdiglabs/vm-integrations
+/charts/registry-scanner @sysdiglabs/cloud-native @sysdiglabs/vm-scanners
