--- a/charts/registry-scanner/Chart.yaml
+++ b/charts/registry-scanner/Chart.yaml
@@ -4,7 +4,7 @@ description: Sysdig Registry Scanner
 type: application
 home: https://www.sysdig.com/
 icon: https://avatars.githubusercontent.com/u/5068817?s=200&v=4
-version: 1.1.26
-appVersion: 0.2.61
+version: 1.1.27
+appVersion: 0.2.62-rc.1
 maintainers:
   - name: sysdiglabs
