--- a/.github/workflows/pr-lint.yaml
+++ b/.github/workflows/pr-lint.yaml
@@ -3,6 +3,7 @@ name: PR Lint
 on:
   pull_request_target:
     types: [opened, edited, reopened, synchronize]
+    branches: [main]
 
 jobs:
   pr-lint:
