--- a/charts/admission-controller/templates/webhook/deployment.yaml
+++ b/charts/admission-controller/templates/webhook/deployment.yaml
@@ -54,8 +54,10 @@ spec:
           image: {{ include "admissionController.kspm.image" . }}
           imagePullPolicy: {{ .Values.webhook.v2.image.pullPolicy | default .Values.global.image.pullPolicy }}
           env:
+            - name: DENY_ON_ERROR
+              value: {{ .Values.webhook.denyOnError | quote }}
             - name: DRY_RUN
-              value: "true"
+              value: {{ .Values.webhook.dryRun | quote }}
             {{- if (or (include "webhook.httpProxy" .) (include "webhook.httpsProxy" .) (include "webhook.noProxy" .) )}}
             - name: HTTP_PROXY
               value: {{ include "webhook.httpProxy" . }}
